...
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
 
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout 
	android:id="@+id/background"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<!-- android:background="@drawable/shoppinglist01d" -->
        <LinearLayout android:id="@+id/filters"
...
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:text="@string/stores"
    	/>	
      </LinearLayout>
      <org.openintents.shopping.ui.widget.ShoppingItemsView 
          android:id="@+id/list_items" 
	  android:layout_width="fill_parent"
	  android:layout_height="0dip"
	  android:layout_weight="1"
          android:cacheColorHint="#00000000"
	  />
      <!-- 
...
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:gravity="right" 
			android:layout_marginRight="10dip" />
	</LinearLayout>
 	<LinearLayout android:id="@+id/add_panel"
 		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<AutoCompleteTextView android:id="@+id/autocomplete_add_item"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_weight="1"/>
		<Button android:id="@+id/button_add_item"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 				
			android:text="@string/add" />
	</LinearLayout>
	
      </LinearLayout>
...
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
...
