...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/check_surround"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:drawable/menuitem_background"
        android:focusable="false"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:paddingRight="10dip"><!-- android:clickable = "true" -->
        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true"
            android:bufferType="spannable"
            android:focusable="true"
...
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_add"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/description"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:drawable/menuitem_background"
        android:clickable="true"
        android:focusable="true"
...
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dip"
            android:layout_toRightOf="@id/units"
...
