...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/mode_item_minimum_height">
    <!--  android:background="@drawable/mode_item"  -->
    <ImageView
        android:id="@+id/mode_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/mode_item_left_margin"
        android:src="@drawable/mode_radio_button" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/mode_item_left_margin"
        android:layout_marginRight="@dimen/mode_item_right_margin"
...
